# disbot

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml.example  deploy-pi.sh  deploy-server.sh  deploy.sh  deploy_no_cross.sh  docker-compose.yaml  release.sh
.cargo/: config.toml
.github/workflows/: cross-compile.yml
docker/: Dockerfile
docker/disbot/: Dockerfile
docker/minecraft/: README.md  docker-compose.yaml
docker/valheim/: README.md  docker-compose.yaml
plans/: admin.md  less-sudo-deploys.md
src/: bot.rs  chat_client.rs  claude_client.rs  cmd.rs  config.rs  debug.rs  docker.rs  emoji.rs  env.rs  go.mod  go.sum  lib.rs  local_client.rs  logging.rs  main.go  main.rs  persistence.rs  shutdown.rs  template.rs  types.rs
src/actor/: mod.rs
src/cmd/: arg_util.rs  chat_mode.rs  check_in.rs  dice_roll.rs  help.rs  mod.rs  poll.rs  ready.rs  reddit_prev.rs  shrug.rs
src/cmd/chat_mode/: local_client.rs  mod.rs
src/cmd/check_in/: actor.rs  command.rs  mod.rs
src/cmd/poll/: actor.rs  cache.rs  command.rs  messages.rs  mod.rs  pollstate.rs
src/cmd/server/: ip.rs  list.rs  mod.rs  start.rs  stop.rs  wake.rs  wol.rs
src/cmd/voice/: connect_util.rs  list.rs  mod.rs  play.rs  reorder.rs  shuffle.rs  skip.rs  stop.rs
src/di/: wire.go  wire_gen.go
src/docker/: container.rs  mod.rs
src/persistence/: mod.rs
src/pkg/bot/: bot.go  config.go  emojicache.go
src/web/: handlers.rs  mod.rs  templates.rs
templates/: base.html  index.html  polls.html
tests/: integration_tests.rs
