[package]
name = "disbot"
version = "0.1.0"
authors = ["dfontana <dyfontana@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
cached = "0.34.0"
derive_builder = "0.10.0"
derive-new = "0.5.9"
dotenv = "0.15.0"
hex = "0.4.3"
humantime = "2.1.0"
once_cell = "1.8.0"
openssl = { version = "0.10.35", features = ["vendored"] }
rand = "0.8.2"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
select = "0.5.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
serenity = {default-features = false, features = ["client", "cache", "gateway", "model","rustls_backend","unstable_discord_api", "voice"], version="0.11.2"}
songbird = {features = ["builtin-queue", "yt-dlp"], version="0.2.2"}
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.28"
tracing-subscriber = "0.2.24"

[dependencies.uuid]
version = "1.0.0-alpha.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
test-case = "2.0.2"

[patch.crates-io]
# Need to patch since songbird pulls in a version, we need to make the same
# Can go away once we're back on an official version number and not git
serenity = {git="https://github.com/serenity-rs/serenity", rev="502fc8d6515d960fdb064acb1893c2d8f4e4efe9"}
songbird = {git="https://github.com/dfontana/songbird", rev="92cf1b4b0047120fcc3d88b8fded7ea0a2d8db32"}
