[package]
name = "disbot"
version = "0.1.0"
authors = ["dfontana <dyfontana@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
cached = "0.39.0"
derive_builder = "0.11.2"
derive-new = "0.5.9"
dotenv = "0.15.0"
hex = "0.4.3"
humantime = "2.1.0"
once_cell = "1.15.0"
openssl = { version = "0.10.42", features = ["vendored"] }
rand = "0.8.2"
regex = "1"
reqwest = { version = "0.11.12", features = ["json"] }
select = "0.5.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serenity = {default-features = false, features = ["client", "cache", "gateway", "model","rustls_backend","unstable_discord_api", "voice"], version="0.11.5"}
songbird = {features = ["builtin-queue", "yt-dlp"], version="0.3.0"}
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
test-case = "2.0.2"
