[package]
name = "disbot"
version = "0.1.0"
authors = ["dfontana <dyfontana@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.68"
axum = "0.8"
base64 = "0.22.1"
bollard = "0.19.1"
cached = { version = "0.55.1", features = ["async"] }
chrono = { version = "0.4.25", features = ["serde"] }
chrono-tz = {version="0.10.3", features=["case-insensitive"]}
clap = { version = "4.0", features = ["derive"] }
derive_builder = "0.20.2"
derive-new = "0.7.0"
hex = "0.4.3"
humantime = "2.1.0"
humantime-serde = "1.1.1"
itertools = "0.14.0"
local-ip-address = "0.6"
once_cell = "1.15.0"
openssl = { version = "0.10.42", features = ["vendored"] }
rand = "0.9.1"
redb = "2.6.0"
regex = "1"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serenity = {default-features = false, features = ["client", "cache", "gateway", "model","rustls_backend","unstable_discord_api", "voice"], version="0.12.2"}
songbird = {features = ["builtin-queue"], version="0.5.0"}
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.2" }
tokenizers = "0.21.2"
tokio = { version = "1.0", features = ["full", "tracing"] }
tokio-util = "0.7"
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1.36"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.15"
urlencoding = "2.1"
bincode_new = {version="2.0.1", package = "bincode", features=["serde"]}
console-subscriber = "0.4.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
kalosm = { version = "0.4.0", features = ["language", "metal"] }
[target.'cfg(target_arch = "x86_64")'.dependencies]
kalosm = { version = "0.4.0", features = ["language", "mkl"] }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Enable serialization support
]

[dev-dependencies]
tempfile = "3.8"
test-case = "3.3.1"
